--- a/libft/Makefile
+++ b/libft/Makefile
@@ -13,7 +13,7 @@
 SRCS			=ft_isalpha.c ft_strlcat.c ft_strlen.c \
 				ft_strncmp.c ft_strdup.c ft_isdigit.c\
 				ft_isalnum.c ft_isascii.c ft_isprint.c\
-				ft_tolower.c ft_toupper.c ft_atoi.c\
+				ft_tolower.c ft_toupper.c\
 				ft_strchr.c ft_strrchr.c ft_strnstr.c\
 				ft_memcpy.c ft_memset.c ft_memmove.c\
 				ft_strlcpy.c ft_split.c ft_strjoin.c\
